--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,12 @@
   "functions": {
     "api/index.php": {
       "runtime": "vercel-php@0.4.0"
+    },
+    "api/sub.php": {
+      "runtime": "vercel-php@0.4.0"
+    },
+    "api/getruleset.php": {
+      "runtime": "vercel-php@0.4.0"
     }
   }
 }
