--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,9 @@
   "functions": {
     "api/index.php": {
       "runtime": "vercel-php@0.4.0"
-    },
-    "api/sub.php": {
-      "runtime": "vercel-php@0.4.0"
-    },
-    "api/getruleset.php": {
-      "runtime": "vercel-php@0.4.0"
     }
-  }
+  },
+  "routes": [
+    { "src": "/(.*)",  "dest": "/api/index.php" }
+  ]
 }
